--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,12 @@
 ha:
   discovery_prefix: homeassistant
   device_id: vallox_digit_se
+  device_name: Vallox Digit SE
 
 mqtt:
-  broker: localhost:1883
-  username: user
-  password: pass
+  broker: 192.168.1.22:1883
+  username: mqtt
+  password: h0lym0ly
 
 vallox:
   port: /dev/ttyUSB0
